# perishable-inventory-with-price-dependent-demand

./: main.ipynb  main.py  pyproject.toml
utils/: utils.py
