[tool.poetry]
name = "perishable-inventory-with-price-dependent-demand"
version = "0.1.0"
description = ""
authors = ["Aitor Fernandez <aitorfernandezcas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
statsmodels = "^0.14.5"
pandas = "^2.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
